--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -1,46 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://api-maps.yandex.ru/2.1.47/?lang=ru_RU&amp;apikey=fe7387f0-4485-4341-91bd-7b6427f658d7" type="text/javascript"></script>
-    <title>{% block title %}{% endblock %}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
+  <script src="https://api-maps.yandex.ru/2.1.47/?lang=ru_RU&amp;apikey=fe7387f0-4485-4341-91bd-7b6427f658d7"
+    type="text/javascript"></script>
+  <script src="https://unpkg.com/imask"></script>
+  <title>{% block title %}{% endblock %}</title>
 </head>
+
 <body class="bg-body-tertiary">
-  <form method="post" action="enter">
-<body style="overflow-x: hidden; width: 100vw;" {% block theme %}{% endblock %}>
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="esp" class="d-flex ms-2 ms-md-0 align-items-center mb-md-0 me-auto link-body-emphasis text-decoration-none nor">
-            <span class="fs-2">ЕСП</span>
-          </a>
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link rounded-4 {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
-            {% if not user.is_authenticated %}
-            <li class="nav-item"><a href="sign" class="nav-link rounded-4 {% block active_sign %}{% endblock %}">Регистрация</a></li>
-            <li class="nav-item"><a href="enter" class="nav-link rounded-4 {% block active_enter %}{% endblock %}">Вход</a></li>
-            {% else %}
-            <li class="nav-item"><a href="logout" class="nav-link rounded-4">Выход</a></li>
-            {% endif %}
-          </ul>
-        </header>
-    </div>
-  </form>
-    {% block content %}{% endblock %}
-    <div class="container">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2023 бронепоезд</p>
+  <div class="container">
+    <nav class="navbar navbar-light navbar-expand-md d-sticky py-3 border-bottom" style="background: inherit;">
+      <div class="container">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <span class="fw-semibold">ЕСП</span></a>
+        <button class="navbar-toggler border-0" data-bs-toggle="collapse" onclick="pos()" data-bs-target="#navcol-3"><span
+            class="visually-hidden">Toggle
+            navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div id="navcol-3" class="collapse navbar-collapse">
+          <form method="post" action="enter">
+            {% csrf_token %}
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item mx-1"><a class="nav-link" href="#">Профиль</a></li>
+              <li class="nav-item mx-1"><a href="/" class="nav-link {% block active_parking %}{% endblock %}"
+                  aria-current="page">Парковка</a></li>
+              {% if not user.is_authenticated %}
+              <li class="nav-link text-primary mx-1"><a class="text-decoration-none" href="enter">Вход</a> / <a href="sign" class="text-decoration-none">Регистрация</a></li>
+              {% else %}
+              <li class="nav-item mx-1"><a href="logout" class="nav-link rounded-4">Выход</a></li>
+              {% endif %}
+            </ul>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </div>
 
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        </a>
+  {% block content %}{% endblock %}
+  <!--
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-body-secondary">© 2023 бронепоезд</p>
 
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="dash_full" class="nav-link px-2 text-body-secondary">Администраторам</a></li>
-          <li class="nav-item"><a href="coupon" class="nav-link px-2 text-body-secondary">Партнерам</a></li>
-        </ul>
-      </footer>
-    </div>
+      <a href="/"
+        class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="dash_full" class="nav-link px-2 text-body-secondary">Администраторам</a></li>
+        <li class="nav-item"><a href="coupon" class="nav-link px-2 text-body-secondary">Партнерам</a></li>
+      </ul>
+    </footer>
+  </div>-->
 </body>
+
 </html>
