--- a/parkingapp/templates/endparking.html
+++ b/parkingapp/templates/endparking.html
@@ -1,49 +1,36 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="modal modal-sheet pb-5 position-static d-block">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content rounded-4 shadow border">
-      <div class="modal-body p-5">
-
-        <ul class="d-grid gap-4 my-0 list-unstyled small">
-          <li class="d-flex gap-4">
-            <div class="bi text-warning flex-shrink-0">
-              <img src="https://qrcode.tec-it.com/API/QRCode?data={{ reciept.0.pk }}&backcolor=%23ffffff" height="48" width="48"/>
-            </div>
-            <div class="ps-5 ms-5 text-muted">
-              {{ reciept.0.start_time }} <br>
-              {{ reciept.0.finish_time }}
-            </div>
-          </li>
-          <hr class="ms-4">
-          <li class="row">
-            <div class="col-6">
-              <h5 class="bi flex-shrink-0">Парковка завершена</h5>
-            </div>
-            <div class="col-6">
-              <h5 class="mb-0 text-end fw-light">{{ reciept.1 }}</h5>
-            </div>
-          </li>
-          <li class="row">
-            <div class="col-6">
-              <h5 class="bi flex-shrink-0">Стоимость</h5>
-            </div>
-            <div class="col-6">
-              <h5 class="mb-0 text-end fw-light">{{ reciept.0.final_price }} ₽</h5>
-            </div>
-          </li>
-          <li class="row">
-            <div class="col-6">
-              <h5 class="bi flex-shrink-0">ID парковки</h5>
-            </div>
-            <div class="col-6">
-              <h5 class="mb-0 text-end fw-light">{{ reciept.0.parking_id_id }}</h5>
-            </div>
-          </li>
-        </ul>
-        <a href="/" class="btn btn-lg rounded-4 btn-primary mt-5 w-100" data-bs-dismiss="modal">Вернуться на главную</a>
-      </div>
+<style>
+  .bla {
+      width: calc(100vw - 2rem);
+  }
+</style>
+<div class="col-12 mx-auto col-lg-6 mt-0 mt-lg-5 mb-3 bla mt-3">
+  <div class="p-4 p-md-5 border bg-white rounded-4 shadow">
+    <div class="row mb-3">
+      <h5 class="col-4">Парковка завершена</h5>
+      <small class="col-8 text-end text-secondary">Jan. 26, 2024, 7:15 a.m.<br>Jan. 26, 2024, 7:33 a.m.</small>
+    </div>
+    <hr class="my-4">
+    <div class="row mb-3">
+      <small class="col-6 text-start">Стоимость</small>
+      <small class="col-6 text-end text-secondary">{{ reciept.0.final_price }} ₽</small>
+    </div>
+    <div class="row mb-3">
+      <small class="col-6 text-start">Длительность</small>
+      <small class="col-6 text-end text-secondary">100 минут</small>
+    </div>
+    <div class="row mb-3">
+      <small class="col-6 text-start">ID чека</small>
+      <small class="col-6 text-end text-secondary">{{ reciept.0.pk }}</small>
+    </div>
+    <div class="row mb-3">
+      <small class="col-6 text-start">ID парковки</small>
+      <small class="col-6 text-end text-secondary">{{ reciept.0.parking_id_id }}</small>
     </div>
   </div>
+</div>
+<div class="container-fluid text-center pt-3">
+  <a href="/">На главную</a>
 </div>
 {% endblock %}
