--- a/parkingapp/templates/endparking.html
+++ b/parkingapp/templates/endparking.html
@@ -33,6 +33,6 @@
   </div>
 </div>
 <div class="container-fluid text-center pt-3">
-  <a href="/">На главную</a>
+  <a href="{% url 'parkingapp:index' %}">На главную</a>
 </div>
 {% endblock %}
