--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -34,6 +34,7 @@
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 1rem;
     border-top-left-radius: 1rem;
+    background: white;
   }
 
   .bla {
